<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@id/city_selection_view"
        layout="@layout/city_selection_view"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/sv_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/dimen_16dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/city_selection_view">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_return"
                style="@style/LittleRoundMaterialBtn"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:paddingStart="@dimen/dimen_8dp"
                android:paddingEnd="@dimen/dimen_8dp"
                android:text="@string/btn_back"
                app:icon="@drawable/ic_plus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_date"
                style="@style/LittleRoundMaterialBtn"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:paddingStart="@dimen/dimen_8dp"
                android:paddingEnd="@dimen/dimen_8dp"
                android:text="@string/btn_date" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ticket"
                style="@style/LittleRoundMaterialBtn"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:paddingStart="@dimen/dimen_8dp"
                android:paddingEnd="@dimen/dimen_8dp"
                android:text="@string/btn_ticket_type"
                app:icon="@drawable/ic_person" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_filter"
                style="@style/LittleRoundMaterialBtn"
                android:paddingStart="@dimen/dimen_8dp"
                android:paddingEnd="@dimen/dimen_8dp"
                android:text="@string/btn_filter"
                app:icon="@drawable/ic_filter" />

        </LinearLayout>

    </HorizontalScrollView>
    
    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@+id/sv_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_flight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:background="@color/grey_1"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_buttons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginVertical="@dimen/dimen_8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_flight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:fontFamily="@font/sfp_display_medium"
                android:text="@string/direct_fight"
                android:textSize="@dimen/dimen_20sp" />

            <include
                android:id="@+id/first_destination"
                layout="@layout/direct_flight_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp" />

            <include
                android:id="@+id/second_destination"
                layout="@layout/direct_flight_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp" />

            <include
                android:id="@+id/third_destination"
                layout="@layout/direct_flight_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_show_all"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_42dp"
                android:background="@color/transparent"
                android:fontFamily="@font/sfp_display_medium"
                android:text="@string/show_all"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/blue_1"
                android:textSize="@dimen/dimen_16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_show_tickets"
        style="@style/BigRoundMaterialBtn"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:text="@string/show_all_tickets"
        app:layout_constraintTop_toBottomOf="@+id/cv_flight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>