<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="@dimen/dimen_172dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:fontFamily="@font/sfp_display_medium"
        android:text="@string/tv_label"
        android:textAlignment="center"
        android:textSize="@dimen/dimen_22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_city_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_36dp"
        android:background="@color/grey_3"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label">

        <include
            android:id="@id/city_selection_view"
            layout="@layout/city_selection_view"
            android:layout_marginVertical="@dimen/dimen_16dp"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_label_of_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_36dp"
        android:fontFamily="@font/sfp_display_medium"
        android:text="@string/tv_label_of_rv"
        android:textSize="@dimen/dimen_22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_city_selection" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_of_rv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_places"
        style="@style/BigRoundMaterialBtn"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_tickets"
        android:text="@string/btn_places"
        android:backgroundTint="@color/grey_3" />

</androidx.constraintlayout.widget.ConstraintLayout>